netflix/jellyfin/jellyfin-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: jellyfin
subsets:
  - addresses:
    - ip: 192.168.1.26 # Node with jellyfin
    ports:
    - port: 8096
