netflix/jellyfin/jellyfin-svc.yaml
apiVersion: v1
kind: Service 
metadata:
  name: jellyfin
spec:
  ports:
  - port: 80
    name: http
