netflix/jellyfin/jellyfin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jellyfin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: netflix.dixneuf19.me
    http:
      paths:
      - backend:
          serviceName: jellyfin
          servicePort: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - netflix.dixneuf19.me
    secretName: netflix-dixneuf19-me-tls
